# gtk_minimal

./: .ocamlinit  Readme.org  dune-project  notes.org
lib/: dune
test/: dune
